--- a/.github/workflows/maturin.yaml
+++ b/.github/workflows/maturin.yaml
@@ -18,17 +18,13 @@ jobs:
         target: [x86_64]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           working-directory: ./vrp-cli
           target: ${{ matrix.target }}
-          sccache: 'true'
-          args: --release --out dist -m Cargo.toml -i 3.12
-          manylinux: auto
+          sccache: "true"
+          args: --release --out dist
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -43,8 +39,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
-          architecture: 'arm64'
+          python-version: "3.12"
+          architecture: "arm64"
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -66,13 +62,13 @@ jobs:
     needs: [linux, macos]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/download-artifact@v4
-      with:
-        path: .
-        merge-multiple: true
-    - name: List artifacts
-      run: ls -lhs
-    - name: Upload to GitHub
-      uses: softprops/action-gh-release@v2
-      with:
-        files: ./*
+      - uses: actions/download-artifact@v4
+        with:
+          path: .
+          merge-multiple: true
+      - name: List artifacts
+        run: ls -lhs
+      - name: Upload to GitHub
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ./*
