--- a/.github/workflows/maturin.yaml
+++ b/.github/workflows/maturin.yaml
@@ -1,7 +1,10 @@
-name: Publish to PyPI
+name: Publish Release
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - "*"
   release:
     types:
       - released
@@ -70,9 +73,45 @@ jobs:
         with:
           path: .
           merge-multiple: true
-      - name: List artifacts
-        run: ls -lhs
+
       - name: Upload to GitHub
+        id: create-release
         uses: softprops/action-gh-release@v2
         with:
           files: ./*
+
+      - uses: actions/checkout@v3
+
+      - name: Generate PyPi index page
+        id: generate_index
+        shell: python
+        env:
+          ASSETS: ${{ steps.create-release.outputs.assets }}
+        run: |
+          import json
+          import os
+
+          # Load the assets data from the previous step
+          assets = json.loads(os.environ['ASSETS'])
+
+          # Define the header for the index.md file
+          index_content = "# vrp-cli\n\n"
+
+          # Iterate over the assets and format them into markdown links
+          for asset in assets:
+            name = asset['name']
+            url = asset['browser_download_url']
+            python_version = name.split('-')[2].split('cp3')[1]
+            index_content += f'<a href="{url}" data-requires-python="==3.{python_version}">{name}</a><br />\n'
+
+          # Write the content to the index.md file
+          with open('docs/vrp-cli/index.md', 'w') as f:
+            f.write(index_content)
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add docs/vrp-cli/index.md
+          git commit -m 'docs: update PyPi index page'
+          git push HEAD:master
